@@ -1,7 +1,7 @@
 package nidam.registration.config;
 
 import jakarta.servlet.DispatcherType;
-import org.springframework.beans.factory.annotation.Value;
+import nidam.registration.config.properties.PasswordProperties;
 import org.springframework.cloud.openfeign.EnableFeignClients;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,16 +17,18 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableFeignClients(basePackages = "nidam.registration.proxy")
 public class ProjectConfig {
 
-	private Logger log = Logger.getLogger(ProjectConfig.class.getName());
+	private final Logger log = Logger.getLogger(ProjectConfig.class.getName());
 
 	@Bean
 	public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -54,37 +56,28 @@ public class ProjectConfig {
 	}
 
 	@Bean
-	public PasswordEncoder passwordEncoder(@Value("#{${custom.password.encoders}}") List<String> encoders,
-	                                       @Value("#{${custom.password.idless.encoder}}") String idlessEncoderName) {
-		log.info("encoders: " + encoders);
+	public PasswordEncoder passwordEncoder(PasswordProperties passwordProperties) {
+		log.info("encoders: " + passwordProperties.getEncoders());
 
-		Map<String, PasswordEncoder> encodersMapping = new HashMap<>();
+		Map<String, Supplier<PasswordEncoder>> encoderSuppliers = Map.of(
+				"bcrypt", () -> new BCryptPasswordEncoder(),
+				"argon2", () -> Argon2PasswordEncoder.defaultsForSpringSecurity_v5_8(),
+				"pbkdf2", () -> Pbkdf2PasswordEncoder.defaultsForSpringSecurity_v5_8(),
+				"scrypt", () -> SCryptPasswordEncoder.defaultsForSpringSecurity_v5_8()
+		);
 
-		if(encoders.contains("scrypt")){ encodersMapping.put("scrypt", SCryptPasswordEncoder.defaultsForSpringSecurity_v5_8());}
-		if(encoders.contains("bcrypt")){ encodersMapping.put("bcrypt", new BCryptPasswordEncoder());}
-		if(encoders.contains("argon2")){ encodersMapping.put("argon2", Argon2PasswordEncoder.defaultsForSpringSecurity_v5_8());}
-		if(encoders.contains("pbkdf2")){ encodersMapping.put("pbkdf2", Pbkdf2PasswordEncoder.defaultsForSpringSecurity_v5_8());}
+		Map<String, PasswordEncoder> encodersMapping = passwordProperties.getEncoders().stream()
+				.filter(key1 -> encoderSuppliers.containsKey(key1))
+				.collect(Collectors.toMap(Function.identity(), key -> encoderSuppliers.get(key).get()));
+
 
 		// first in list used to encode
-		DelegatingPasswordEncoder passwordEncoder = new DelegatingPasswordEncoder(encoders.get(0), encodersMapping);
+		DelegatingPasswordEncoder passwordEncoder = new DelegatingPasswordEncoder(passwordProperties.getEncoders().getFirst(), encodersMapping);
 		// use this encoder if {id} does not exist
-		passwordEncoder.setDefaultPasswordEncoderForMatches(getEncoderForIdlessHash(idlessEncoderName));
+		passwordEncoder.setDefaultPasswordEncoderForMatches(
+				encoderSuppliers.getOrDefault(passwordProperties.getIdless(), () -> SCryptPasswordEncoder.defaultsForSpringSecurity_v5_8()).get()
+		);
 		return passwordEncoder;
 	}
 
-	private PasswordEncoder getEncoderForIdlessHash(String encoderName){
-		log.info("encoderName: " + encoderName);
-		switch (encoderName){
-//			case "scrypt":
-//				return SCryptPasswordEncoder.defaultsForSpringSecurity_v5_8();
-			case "bcrypt":
-				return new BCryptPasswordEncoder();
-			case "argon2":
-				return Argon2PasswordEncoder.defaultsForSpringSecurity_v5_8();
-			case "pbkdf2":
-				return Pbkdf2PasswordEncoder.defaultsForSpringSecurity_v5_8();
-			default:
-				return SCryptPasswordEncoder.defaultsForSpringSecurity_v5_8();
-		}
-	}
 }
